<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="142dp"
        android:layout_marginTop="476dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="180dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/photo"
        app:iconTint="#090000" />




    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="192dp"
        android:layout_height="200dp"
        android:textSize="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="518dp"
        android:src="@drawable/displaypic"
        app:srcCompat="@drawable/displaypic"
        tools:srcCompat="@drawable/displaypic">

    </ImageView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="263dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="423dp"
        android:fontFamily="@font/adamina"
        android:text="@string/name_clive_dsouza"
        android:textColor="#000000"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="366dp"
        android:fontFamily="@font/adamina"
        android:text="@string/age_21"
        android:textColor="#000000"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="335dp"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="310dp"
        android:fontFamily="@font/adamina"
        android:text="@string/gender_male"
        android:textColor="#000000"
        android:textSize="15dp" />

</RelativeLayout>
